# azure_sphere_wolfmqtt_sample

./: .gitmodules
wolfMQQT_sample/: CMakeLists.txt  app_manifest.json  main.c  multithread.c  multithread.h  user_settings.h
wolfMQQT_sample/wolfMQTT/examples/: mqttexample.h
wolfMQQT_sample/wolfMQTT/examples/aws/: awsiot.vcxproj
wolfMQQT_sample/wolfMQTT/examples/azure/: azureiothub.vcxproj
wolfMQQT_sample/wolfMQTT/examples/firmware/: fwclient.vcxproj  fwpush.vcxproj
wolfMQQT_sample/wolfMQTT/examples/mqttclient/: mqttclient.vcxproj
wolfMQQT_sample/wolfMQTT/examples/multithread/: multithread.vcxproj
wolfMQQT_sample/wolfMQTT/examples/nbclient/: nbclient.vcxproj
wolfMQQT_sample/wolfMQTT/examples/sn-client/: sn-client.vcxproj  sn-client_qos-1.vcxproj  sn-multithread.vcxproj
wolfMQQT_sample/wolfMQTT/examples/wiot/: wiot.vcxproj
wolfMQQT_sample/wolfMQTT/src/: mqtt_socket.c
